# YouList

./: CNAME  README.md  app.py  clear.py  database.db  init_db.py  main.py  pyproject.toml  replit.nix  schema.sql
static/: scripts.js  styles.css
templates/: create.html  edit.html  home.html  index.html
