[tool.poetry]
name = "repl_python3_YouList"
version = "0.1.0"
description = ""
authors = ["JBloves27 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.2"
Flask = "^2.1.1"
Flask-SQLAlchemy = "^2.5.1"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
